// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichItem component renders danger tag when specified with theme prop 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 5px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  height: 80px;
  padding: 0 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > div {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 45px;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 img {
  width: 100%;
  border-radius: 50%;
}

.c9 {
  width: 94px;
  margin: 0 10px 0 0;
  font-size: 14px;
  font-weight: normal;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c11 {
  color: #828282;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  width: 46px;
  color: #fff;
  border-radius: 3px;
  padding: 1px 6px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 8px;
  line-height: 12px;
  text-align: center;
  background-color: #FF5F58;
}

.c13 {
  -webkit-transition: max-height 350ms ease,padding 300ms 50ms,opacity 300ms;
  transition: max-height 350ms ease,padding 300ms 50ms,opacity 300ms;
  max-height: 0;
  opacity: 0;
  visibility: hidden;
  overflow-y: auto;
  visibility: visible;
  padding-bottom: 30px;
  max-height: 500px;
  opacity: 1;
}

.c1 {
  position: relative;
  margin: 0 calc(-1 * var(--padding-inline));
  padding: 0 var(--padding-inline);
  -webkit-transition: background-color 0.15s ease;
  transition: background-color 0.15s ease;
}

.c1:hover .c3 {
  cursor: pointer;
}

.c0 + .c0::before {
  content: ' ';
  border-top: 1px solid #f2f2f2;
  display: block;
  position: absolute;
  width: 100%;
  top: -1px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3 c4 c5"
    >
      <div
        class="c2 c4"
      >
        <div
          class="c6"
        >
          <img
            alt="avatar"
            src="../../assets/me/mentors.svg"
          />
        </div>
        <div
          class="c7 c8"
        >
          <div
            class="c2 c4"
          >
            <h5
              class="c9"
            >
              Declined
            </h5>
            <div
              class="c10"
            >
              Declined
            </div>
          </div>
          <h5
            class="c9 c11"
          >
            web dev
          </h5>
        </div>
        <div
          class="c12"
        >
          3 days ago
        </div>
      </div>
    </div>
    <div
      class="c13"
    />
  </div>
</div>
`;

exports[`RichItem component renders primary tag when specified with theme prop 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 5px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  height: 80px;
  padding: 0 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > div {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 45px;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 img {
  width: 100%;
  border-radius: 50%;
}

.c9 {
  width: 94px;
  margin: 0 10px 0 0;
  font-size: 14px;
  font-weight: normal;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c11 {
  color: #828282;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  width: 46px;
  color: #fff;
  border-radius: 3px;
  padding: 1px 6px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 8px;
  line-height: 12px;
  text-align: center;
  background-color: #69D5B1;
}

.c13 {
  -webkit-transition: max-height 350ms ease,padding 300ms 50ms,opacity 300ms;
  transition: max-height 350ms ease,padding 300ms 50ms,opacity 300ms;
  max-height: 0;
  opacity: 0;
  visibility: hidden;
  overflow-y: auto;
  visibility: visible;
  padding-bottom: 30px;
  max-height: 500px;
  opacity: 1;
}

.c1 {
  position: relative;
  margin: 0 calc(-1 * var(--padding-inline));
  padding: 0 var(--padding-inline);
  -webkit-transition: background-color 0.15s ease;
  transition: background-color 0.15s ease;
}

.c1:hover .c3 {
  cursor: pointer;
}

.c0 + .c0::before {
  content: ' ';
  border-top: 1px solid #f2f2f2;
  display: block;
  position: absolute;
  width: 100%;
  top: -1px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3 c4 c5"
    >
      <div
        class="c2 c4"
      >
        <div
          class="c6"
        >
          <img
            alt="avatar"
            src="../../assets/me/mentors.svg"
          />
        </div>
        <div
          class="c7 c8"
        >
          <div
            class="c2 c4"
          >
            <h5
              class="c9"
            >
              Accepted
            </h5>
            <div
              class="c10"
            >
              Accepted
            </div>
          </div>
          <h5
            class="c9 c11"
          >
            web dev
          </h5>
        </div>
        <div
          class="c12"
        >
          3 days ago
        </div>
      </div>
    </div>
    <div
      class="c13"
    />
  </div>
</div>
`;

exports[`RichItem component renders secondary tag when specified with theme prop 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 5px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  height: 80px;
  padding: 0 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > div {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 45px;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 img {
  width: 100%;
  border-radius: 50%;
}

.c9 {
  width: 94px;
  margin: 0 10px 0 0;
  font-size: 14px;
  font-weight: normal;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c11 {
  color: #828282;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  width: 46px;
  color: #fff;
  border-radius: 3px;
  padding: 1px 6px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 8px;
  line-height: 12px;
  text-align: center;
  background-color: #F3CA3E;
}

.c13 {
  -webkit-transition: max-height 350ms ease,padding 300ms 50ms,opacity 300ms;
  transition: max-height 350ms ease,padding 300ms 50ms,opacity 300ms;
  max-height: 0;
  opacity: 0;
  visibility: hidden;
  overflow-y: auto;
  visibility: visible;
  padding-bottom: 30px;
  max-height: 500px;
  opacity: 1;
}

.c1 {
  position: relative;
  margin: 0 calc(-1 * var(--padding-inline));
  padding: 0 var(--padding-inline);
  -webkit-transition: background-color 0.15s ease;
  transition: background-color 0.15s ease;
}

.c1:hover .c3 {
  cursor: pointer;
}

.c0 + .c0::before {
  content: ' ';
  border-top: 1px solid #f2f2f2;
  display: block;
  position: absolute;
  width: 100%;
  top: -1px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3 c4 c5"
    >
      <div
        class="c2 c4"
      >
        <div
          class="c6"
        >
          <img
            alt="avatar"
            src="../../assets/me/mentors.svg"
          />
        </div>
        <div
          class="c7 c8"
        >
          <div
            class="c2 c4"
          >
            <h5
              class="c9"
            >
              Pending
            </h5>
            <div
              class="c10"
            >
              Pending
            </div>
          </div>
          <h5
            class="c9 c11"
          >
            web dev
          </h5>
        </div>
        <div
          class="c12"
        >
          3 days ago
        </div>
      </div>
    </div>
    <div
      class="c13"
    />
  </div>
</div>
`;
